apply plugin: 'application'
apply plugin: 'eclipse'

sourceCompatibility = "1.9"
targetCompatibility = "1.9"

repositories {
    jcenter()
    maven {
    	url "https://oss.sonatype.org/content/repositories/snapshots/"
    }
}

dependencies {
    compile 'org.industrial-devops:titan.ccp.model:0.0.1-SNAPSHOT'
    compile 'net.kieker-monitoring:kieker:1.14-SNAPSHOT'
    compile 'net.sourceforge.teetime:teetime:3.0' //TODO remove

    compile 'org.apache.kafka:kafka-clients:1.0.1' //TODO remove
    compile 'com.google.guava:guava:20.0'
    
    compile 'com.google.code.gson:gson:2.8.2'
    
    compile 'org.apache.kafka:kafka-streams:1.0.1'
    compile 'org.slf4j:slf4j-simple:1.6.1'

    // Use JUnit test framework
    testCompile 'junit:junit:4.12'
}

tasks.withType(AbstractCompile) {
  options.compilerArgs += ["--add-modules", "jdk.incubator.httpclient"]
}

tasks.withType(Test) {
  jvmArgs += ["--add-modules", "jdk.incubator.httpclient"]
}

mainClassName = "titan.ccp.aggregation.AggregationService"

applicationDefaultJvmArgs = ["--add-modules=jdk.incubator.httpclient"]

eclipse {
    classpath {
       downloadSources=true
       downloadJavadoc=true
    }
}